--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "express-validator": "^7.2.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1"
   },
   "scripts": {
